add new pathway names in output

--- a/oncoFinder2/templates/core/core_calculation_parameters.html
+++ b/oncoFinder2/templates/core/core_calculation_parameters.html
@@ -105,6 +105,8 @@
                 {{ form.calculate_pvalue_each }}<br/>
                 {{ form.calculate_pvalue_all.label_tag }}&nbsp;
                 {{ form.calculate_pvalue_all }}
+                {{ form.new_pathway_names.label_tag }}&nbsp;
+                {{ form.new_pathway_names }}
       </small>
                 
               </div>                                   
