--- a/oncoFinder2/templates/core/core_calculation_parameters.html
+++ b/oncoFinder2/templates/core/core_calculation_parameters.html
@@ -30,7 +30,13 @@
        <form class="form-horizontal" role="form" action="" method="post"  id="calculation_parameters_form">
           {% csrf_token %}
           <small>
-          
+          {% if document.project.field = 'med' %}
+          {{form.hormone_status.label_tag}} &nbsp;&nbsp;&nbsp;
+          {{form.hormone_status}}
+          <br/>
+          {{form.her2_status.label_tag}} &nbsp;&nbsp;&nbsp;
+          {{form.her2_status}}
+          {% else %}
           <div class="form-group form-group-sm">
           <div class="col-sm-10">
           {{ form.db_choice.label_tag }}
@@ -107,13 +113,14 @@
                 {{ form.calculate_pvalue_all }}
                 {{ form.new_pathway_names.label_tag }}&nbsp;
                 {{ form.new_pathway_names }}
+      
       </small>
                 
               </div>                                   
             </div>
           </div> 
           
-          
+         {%endif%} 
           
     </div>
     <div class="panel-footer">
