add Sp Sn AUC new Accuracy to medic

--- a/oncoFinder2/templates/medic/medic_treatment_detail.html
+++ b/oncoFinder2/templates/medic/medic_treatment_detail.html
@@ -45,7 +45,10 @@
 {{PMS1|safe}}
 </div> 
 <div id="fragment-4" class="tab-pane fade well">
-<h4>Reliability of the test = {{reliability|floatformat:"-2"}}</h4>
+<p>Specificity = {{specificity|floatformat:"-2"}}</p>
+<p>Sensitivity = {{sensitivity|floatformat:"-2"}}</p>
+<p>AUC = {{AUC|floatformat:"-2"}}</p>
+Accuracy = {{accuracy|floatformat:"-2"}}
   <div id="container" style="width:900px; height:400px;">
 
 
