add FDR correction

--- a/oncoFinder2/templates/core/core_calculation_parameters.html
+++ b/oncoFinder2/templates/core/core_calculation_parameters.html
@@ -70,6 +70,8 @@
                 
                 {{ form.use_ttest.label_tag }}&nbsp;&nbsp;
                 {{ form.use_ttest }}
+                {{ form.use_fdr.label_tag }}&nbsp;&nbsp;
+                {{ form.use_fdr }}
                 {{ form.use_ttest_1sam.label_tag }}&nbsp;&nbsp;
                 {{ form.use_ttest_1sam }}
             </div>
