fix ttest 1 samp

--- a/oncoFinder2/templates/document/sample_detail.html
+++ b/oncoFinder2/templates/document/sample_detail.html
@@ -70,8 +70,8 @@
 	    <thead>
 	      <tr>
 	        <th>Pathway</th>
-	        <th>PMS</th>
-	        <th>PMS1</th>
+	        <th>PAS</th>
+	        <th>PAS1</th>
 	     </tr>
 	    </thead>
 	    <tbody>
