--- a/oncoFinder2/templates/base_profiles.html
+++ b/oncoFinder2/templates/base_profiles.html
@@ -61,8 +61,12 @@
                 Drugs database
                 </a>
             </li>
-            <li><a href="/db/medic/"><img src='/static/images/pharmacy.png' style="width: 40px; margin-right: 3px;"/>
+            <li><a href="/db/medic/"><img src='/static/images/diagnostic.png' style="width: 40px; margin-right: 3px;"/>
                 Medical DB
+                </a>
+            </li>
+            <li><a href="/xpn/"><img src='/static/images/tablet.png' style="width: 40px; margin-right: 3px;"/>
+                XPN 
                 </a>
             </li>
      </ul>
