add prev files to XPN

--- a/oncoFinder2/templates/core/xpnform.html
+++ b/oncoFinder2/templates/core/xpnform.html
@@ -9,6 +9,7 @@
   <img src='/static/images/tablet.png' style="width: 100px;"/>
     XPN normalization 
   </h1>
+  <a href="/xpn/prevfiles/" class="btn btn-default pull-right">Previously calculated files</a>
   <hr/>
   {% if form.errors %}
   <div class="alert alert-danger">
