--- a/oncoFinder2/templates/medic/medic_treatment_detail.html
+++ b/oncoFinder2/templates/medic/medic_treatment_detail.html
@@ -43,7 +43,7 @@
 {{prob|safe}}
 </div>
 <div id="fragment-3" class="tab-pane fade well">
-{{PMS1|safe}}
+{{PAS1|safe}}
 </div> 
 <div id="fragment-4" class="tab-pane fade well">
 
